# areo_ledger

./: .env.example  .env.production  .gitignore  ARCHITECTURE.md  BACKEND_API.md  CLEAN_ARCHITECTURE.md  Cargo.toml  Dockerfile  GIT_COMMANDS.md  LICENSE  PROJECT_SUMMARY.md  README.md  REFACTORING_SUMMARY.md  SERVICE_LAYER_GUIDE.md  SMART_CONTRACTS_GUIDE.md  setup.bat  start.bat
Frontend/: README.md  index.html  vite.config.ts
contracts/ethereum/: FIX_OPENZEPPELIN_ERROR.md  hardhat.config.js  install.bat  package-lock.json  package.json
contracts/solana/: Anchor.toml
deploy/: README.md  backup.ps1  docker-compose.prod.yml  nginx.conf
frontend/: package-lock.json  package.json  tailwind.config.js
frontend-luxury/: .env.local.example  IMPLEMENTATION_GUIDE.md  README.md  SETUP.md  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend-luxury/app/: layout.tsx  not-found.tsx  page.tsx  providers.tsx
frontend-luxury/context/: CartContext.tsx  ThemeContext.tsx
frontend-luxury/lib/: api.ts  hooks.ts  utils.ts
frontend-luxury/styles/: globals.css
frontend/public/: index.html
frontend/src/: App.css  App.tsx  index.css
migrations/: 01_create_users.sql  01_create_users_pg.sql  02_create_flights.sql  02_order_status_history.sql  03_create_bookings.sql  03_create_bookings_pg.sql  04_create_payments.sql  04_create_payments_pg.sql  05_create_profit_ledger.sql  complete_schema.sql
src/: auth.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs
src/domain/: mod.rs
src/infrastructure/: config.rs  db.rs  mod.rs  observability.rs
src/middleware/: auth.rs
src/models/: booking.rs  flight.rs  mod.rs  payment.rs  user.rs
src/routes/: admin.rs  assets.rs  bookings.rs  calculator.rs  dto.rs  flights.rs  health.rs  mod.rs  order_tracking.rs  orders.rs  payments.rs  payments_new.rs  portfolio.rs  products.rs  profile.rs  transactions.rs  users.rs
src/services/: admin_service.rs  asset_service.rs  blockchain.rs  booking_service.rs  calculator_service.rs  email.rs  flight_service.rs  mod.rs  order_service.rs  payment_service.rs  portfolio_service.rs  (+4 more)
tests/: integration_postgres.rs
(+133 files in other folders)
