[package]
name = "areo_ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.6"
actix-governor = "0.5"
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio", "macros", "uuid"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = "0.4"
dotenvy = "0.15"
