[package]
name = "areo_ledger"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.12.1"
actix-cors = "0.6"
actix-governor = "0.5"
postgres = "0.19"
r2d2 = "0.8"
r2d2_postgres = "0.18"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4", "serde"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
reqwest = { version = "0.11", features = ["json"] }
lettre = "0.11"
lettre_email = "0.9"
log = "0.4"
env_logger = "0.11"
serde_urlencoded = "0.7"
